# islpy

./: CMakeLists.txt  aksetup_helper.py  gen_wrap.py  isl_filelist.cmake  pyproject.toml  setup.py  siteconf.cmake
.github/workflows/: ci.yml
isl-supplementary/: isl_config.h
islpy/: __init__.py
src/wrapper/: wrap_helpers.hpp  wrap_isl.cpp  wrap_isl.hpp  wrap_isl_part1.cpp  wrap_isl_part2.cpp
test/: test_isl.py
