[build-system]
# Minimum requirements for the build system to execute.
requires = ["setuptools>=42.0.0", "wheel>=0.34.2", "pybind11>=2.5.0"]
build-backend = "setuptools.build_meta"

[tool.cibuildwheel]

skip = "*-win-* [cp]p3[67]-*"

[build-system]
requires = [
    "setuptools>=42",
    "wheel>=0.34.2",
    "cmake>=3.18<=3.22",
    "scikit-build",
    "nanobind",
    "make",
]
build-backend = "setuptools.build_meta"
