[project]
name = "islpy"
version = "2023.2.5"

[tool.cibuildwheel]
skip = "*-win-* [cp]p3[67]-*"

[build-system]
requires = [
    "scikit-build-core",
    "nanobind",
    "ninja",
    "pcpp",
]
build-backend = "scikit_build_core.build"

[tool.cibuildwheel.macos]
archs = "x86_64 arm64"

[tool.cibuildwheel.macos.environment]
# Needed for full C++17 support
MACOSX_DEPLOYMENT_TARGET = "10.14"
